# Young-Certi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  backend.yaml  cluster-down.yml  cluster-up.yml  crawler.yaml  frontend-deploy.yml  frontend.yaml  infra.yaml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: Dockerfile  README.md  pyproject.toml
backend/src/young_certi_api/: __init__.py  errors.py  export_openapi.py  main.py  pool.py  schemas.py
backend/src/young_certi_api/routers/: questions.py
backend/tests/: test_export_openapi.py  test_pool.py  test_routes.py  test_schemas.py
crawler/: Dockerfile  README.md  go.mod  go.sum  smoke_test.go
crawler/testdata/: fixture-questions.json  krdump-page.html
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/scripts/: dev-server.mjs
frontend/src/: App.tsx  main.tsx  styles.css
frontend/tests/: components.test.tsx  exam-attempt.test.tsx  exam-landing.test.tsx  exam-page.test.tsx  exam-result.test.tsx  home.test.tsx  page-header.test.tsx  practice-page.test.tsx  set-results.test.tsx  set-solve.test.tsx  sets-list.test.tsx  storage.test.tsx
infra/: Dockerfile  README.md
infra/bootstrap/: main.tf  outputs.tf  variables.tf  (+1 more)
scripts/: verify-m01.sh
(+186 files in other folders)
