[project]
name = "young-certi-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.35",
  "fastapi>=0.115",
  "httpx>=0.28",
  "orjson>=3.10",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "schemathesis>=3.39",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["boto3", "yaml"]
ignore_missing_imports = true
